--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage{hyperref}
 %====================================================
 % بسته‌ای برای واردکردن واژه‌نامه در متن، این بسته باید بعد از hyperref صدا زده شود. 
-\usepackage[xindy,acronym,nonumberlist=true]{glossaries}
+\usepackage[xindy,acronym,nonumberlist=true,toc]{glossaries}
 %====================================================
 % بستهٔ xepersian آخرین بسته‌ای باشد که فراخوانی می‌شود.
 \usepackage{xepersian}
