--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,11 @@
 \usepackage{hyperref}
 %====================================================
 % بسته‌ای برای واردکردن واژه‌نامه در متن، این بسته باید بعد از hyperref صدا زده شود. 
-\usepackage[xindy,acronym,nonumberlist=true,toc]{glossaries}
+\usepackage[xindy,acronym,toc]{glossaries}
+\makeatletter
+\@ifpackagelater{glossaries}{2022/10/14}%
+	{\setacronymstyle{footnote}}{}
+\makeatother
 %====================================================
 % بستهٔ xepersian آخرین بسته‌ای باشد که فراخوانی می‌شود.
 \usepackage{xepersian}
