--- a/main.tex
+++ b/main.tex
@@ -62,7 +62,16 @@
 تعریف کنید؛ برای مثال:
 \gls{phi}.
 
+اجراهای مربوط به زیندی در انتهای فایل main آورده شده‌اند.
+
 \printglossary
 \printabbreviation
 
 \end{document}
+اجراهای زیندی در cmd:
+xindy -L persian-variant1 -C utf8 -I xindy -M main.xdy -t main.glg -o main.gls main.glo
+xindy -L persian-variant1 -C utf8 -I xindy -M main.xdy -t main.blg -o main.bls main.blo
+xindy -L english -C utf8 -I xindy -M main.xdy -t main.alg -o main.acr main.acn
+
+برای ویرایشگر TeXstudio:
+xindy -L persian-variant1 -C utf8 -I xindy -M %.xdy -t %.glg -o %.gls %.glo | xindy -L persian-variant1 -C utf8 -I xindy -M %.xdy -t %.blg -o %.bls %.blo | xindy -L english -C utf8 -I xindy -M %.xdy -t %.alg -o %.acr %.acn
