LTR columns for English gloss.

--- a/glossSettings.tex
+++ b/glossSettings.tex
@@ -142,9 +142,11 @@
 	\twocolumn
 	\setglossarystyle{myEntoFa}%
 %	\renewcommand{\baselinestretch}{1.2}\selectfont
+	\LTRdblcol
 	\Oldprintglossary[type=english]%
 	\cleardoublepage
 	\setglossarystyle{myFaToEn}%
+	\RTLdblcol
 	\Oldprintglossary[type=persian]%
 	\onecolumn
 }
